# wsds

./: .gitignore  .pre-commit-config.yaml  LICENSE  MIGRATION_PLAN.md  README.md  check_pyarrow_schemas.py  check_shard_consistency.py  pyproject.toml  requirements.txt  run_dataset_conversion.slurm  run_dataset_conversion_parallel.slurm  test_dataset.yaml  tests.py
docs/: dataset-structure.md
docs/internal/: RecordBatchFileWriter-fd-lifecycle.md
examples/: live-filtering-demo.py  view-transcripts.py  visualize.py  wsds-pause-test.ipynb  wsds-pause-test.py  wsds-plot-demo.py
examples/dataset_conversion/: convert_dataset.sh
examples/dataset_conversion/configs/: fb_ears_v4-vad_ws.yaml  fb_ears_v4-vad_ws_continuous.yaml  ja_hq_anneal_v4-vad_ws_continuous.yaml  librilight_v3-vad_ws.yaml  reazonspeech_v4-vad_ws_continuous.yaml  spotify2_v3-vad_ws.yaml  template.yaml  voices_com_v4-vad_ws_continuous.yaml  voxceleb2_2_v3-vad_ws.yaml  voxceleb2_v3-vad_ws.yaml  voxceleb_v3-vad_ws.yaml  wyndlabs-ar_v5-diarized.yaml  wyndlabs-de_v5-diarized.yaml  wyndlabs-es_v5-diarized.yaml  wyndlabs-fr_v5-diarized.yaml  wyndlabs-it_v5-diarized.yaml  wyndlabs-ja_v5-diarized.yaml  (+4 more)
examples/dataset_inspection/: create_validation.ipynb  filter_generate_table.ipynb  load_view_data.ipynb  sql_create_subsets.ipynb
experiments/: convert-webdataset-to-wsds.py  wsds.py  wsds_audio.py  wsds_dataset.py  wsds_extract_index.py  wsds_fetch_columns.py
experiments/tests/: v4_vad-ws_continuous_datasets.yaml  v4_vad-ws_datasets.yaml
hume_wsds/: __init__.py  __main__.py  constants.py  utils.py  ws_audio.py  ws_dataset.py  ws_index.py  ws_sample.py  ws_shard.py  ws_sink.py  ws_tools.py
scripts/: test_audio_backends.sh
support_scripts/: bench_validate_shards.py
tests/: test_shard_from_audio.py  test_sharded_sink.py
wsds/: __init__.py  __main__.py  audio_codec.py  convplayer.py  utils.py  ws_audio.py  ws_dataset.py  ws_decode.py  ws_feather_index.py  ws_index.py  ws_indexer.py  ws_modal_shard.py  ws_s3_shard.py  ws_sample.py  ws_shard.py  ws_sink.py  ws_tools.py
wsds/pupyarrow/: file_reader.py  pupyarrow.py
(+53 files in other folders)
