[project]
name = "wsds"
version = "0.2.0"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.scripts]
wsds = "wsds.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
ignore = ["E203", "E501", "E731"]
extend-select = ["I"]

# --- build-data --- #
[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"
